--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Quiz App</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <h1>Quiz App</h1>
+    </div>
+  </body>
 </html>
