--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Quiz App</title>
   </head>
   <body>
-    <div>
+    <header>
       <h1>Quiz App</h1>
-    </div>
+    </header>
   </body>
 </html>
