--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <header>
       <h1>Quiz App</h1>
     </header>
-    <main></main>
+    <main>
+      <div class="card">
+        <p class="Question">Question</p>
+        <p class="description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+          laboriosam suscipit in beatae ea sunt dolor cupiditate? Non, qui ut!
+        </p>
+        <button class="show answer">show answer</button>
+      </div>
+    </main>
   </body>
 </html>
