added button styling

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
           laboriosam suscipit in beatae ea sunt dolor cupiditate? Non, qui ut!
         </p>
-        <button class="show answer">show answer</button>
+        <button class="showanswer">show answer</button>
+        <button class="one">html</button>
+        <button class="one">flexbox</button>
+        <button class="one">css</button>
       </div>
     </main>
   </body>
