--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
     <title>Quiz App</title>
   </head>
   <body>
-    <header>
-      <h1>Quiz App</h1>
+    <header class="header">
+      <h1 class="header__heading">Quiz App</h1>
     </header>
     <main>
       <div class="card">
-        <p class="Question">Question</p>
+        <span class="material-symbols-outlined">bookmark</span>
+        <h2 class="card__heading">Question</h2>
         <p class="description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
           laboriosam suscipit in beatae ea sunt dolor cupiditate? Non, qui ut!
