--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
         <button class="one">flexbox</button>
         <button class="one">css</button>
       </div>
+
+      <div class="card">
+        <span class="material-symbols-outlined">bookmark</span>
+        <h2 class="card__heading">Question</h2>
+        <p class="description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
+          laboriosam suscipit in beatae ea sunt dolor cupiditate? Non, qui ut!
+        </p>
+        <button class="showanswer">show answer</button>
+        <button class="one">html</button>
+        <button class="one">flexbox</button>
+        <button class="one">css</button>
+      </div>
     </main>
   </body>
 </html>
