added links to buttons

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
           laboriosam suscipit in beatae ea sunt dolor cupiditate? Non, qui ut!
         </p>
-        <button class="showanswer">show answer</button>
+        <button class="showanswer"><a href="#Quiz App" class="correctanswer">show answer</button> </a>
         <button class="one">html</button>
         <button class="one">flexbox</button>
         <button class="one">css</button>
@@ -35,7 +35,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
           laboriosam suscipit in beatae ea sunt dolor cupiditate? Non, qui ut!
         </p>
-        <button class="showanswer">show answer</button>
+        <button class="showanswer"><a href="#Quiz App" class="correctanswer">show answer</button></a>
         <button class="one">html</button>
         <button class="one">flexbox</button>
         <button class="one">css</button>
