--- a/index.html
+++ b/index.html
@@ -41,5 +41,16 @@
         <button class="one">css</button>
       </div>
     </main>
+    <footer>
+        <nav class="navbar">
+            <div class="navbar-links">
+            <ul>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+                <li><a href="#">test</a></li>
+            </ul>
+            </div>
+        </nav>
+    </footer>
   </body>
 </html>
