--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <nav class="navbar">
             <div class="navbar-links">
             <ul>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
-                <li><a href="#">test</a></li>
+                <li><a href="#">home</a></li>
+                <li><a href="#">bookmark</a></li>
+                <li><a href="#">profile</a></li>
             </ul>
             </div>
         </nav>
