added navbar changings

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>Quiz App</title>
   </head>
   <body>
@@ -45,9 +48,15 @@
         <nav class="navbar">
             <div class="navbar-links">
             <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">bookmark</a></li>
-                <li><a href="#">profile</a></li>
+                <li><a href="#"><span class="material-symbols-outlined2">
+                    home
+                    </span></a></li>
+                <li><a href="#"><span class="material-symbols-outlined2">
+                    bookmarks
+                    </span></a></li>
+                <li><a href="#"><span class="material-symbols-outlined2">
+                    account_circle
+                    </span></a></li>
             </ul>
             </div>
         </nav>
