bookmark class added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     </header>
     <main>
       <div class="card">
+        <div class="bookmarkwrapper">
         <span class="material-symbols-outlined">bookmark</span>
+        </div>
         <h2 class="card__heading">Question</h2>
         <p class="description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
@@ -32,7 +34,9 @@
       </div>
 
       <div class="card">
+        <div class="bookmarkwrapper">
         <span class="material-symbols-outlined">bookmark</span>
+    </div>
         <h2 class="card__heading">Question</h2>
         <p class="description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
@@ -48,13 +52,13 @@
         <nav class="navbar">
             <div class="navbar-links">
             <ul>
-                <li><a href="#"><span class="material-symbols-outlined2">
+                <li><a href="#"><span class="material-symbols-outlined">
                     home
                     </span></a></li>
-                <li><a href="#"><span class="material-symbols-outlined2">
+                <li><a href="#"><span class="material-symbols-outlined">
                     bookmarks
                     </span></a></li>
-                <li><a href="#"><span class="material-symbols-outlined2">
+                <li><a href="#"><span class="material-symbols-outlined">
                     account_circle
                     </span></a></li>
             </ul>
