--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
           laboriosam suscipit in beatae ea sunt dolor cupiditate? Non, qui ut!
         </p>
-        <button class="showanswer"><a href="#Quiz App" class="correctanswer">show answer</button> </a>
+        <button class="showanswer"><a href="Bookmarks.html" class="correctanswer">show answer</button> </a>
         <button class="one">html</button>
         <button class="one">flexbox</button>
         <button class="one">css</button>
@@ -43,7 +43,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
           laboriosam suscipit in beatae ea sunt dolor cupiditate? Non, qui ut!
         </p>
-        <button class="showanswer"><a href="#Quiz App" class="correctanswer">show answer</button></a>
+        <button id="anker" class="showanswer"><a href="Bookmarks.html#anker" class="correctanswer">show answer</button></a>
         <button class="one">html</button>
         <button class="one">flexbox</button>
         <button class="one">css</button>
@@ -53,10 +53,10 @@
         <nav class="navbar">
             <div class="navbar-links">
             <ul>
-                <li><a href="#"><span class="material-symbols-outlined">
+                <li><a href="index.html"><span class="material-symbols-outlined">
                     home
                     </span></a></li>
-                <li><a href="#"><span class="material-symbols-outlined">
+                <li><a href="Bookmarks.html"><span class="material-symbols-outlined">
                     bookmarks
                     </span></a></li>
                 <li><a href="#"><span class="material-symbols-outlined">
