--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <script src="index.js" defer></script>
     <title>Quiz App</title>
   </head>
   <body>
@@ -36,7 +37,9 @@
 
       <div class="card">
         <div class="bookmarkwrapper">
+          <button class="bookmark active holz" data-js="bookmark">
         <span class="material-symbols-outlined">bookmark</span>
+      </button>
     </div>
         <h2 class="card__heading">Question</h2>
         <p class="description">
